fixed a twinkling bug when speedCurrent was 0.

--- a/lightstrip.yml
+++ b/lightstrip.yml
@@ -432,9 +432,13 @@ light:
 
             if (framesPassed > 0 || speedCurrent == 0) {
               lastUpdateTime = currentTime;
+              if (speedCurrent == 0) {
+                return;
+              }
             } else {
               return;
             }
+            
             it.all() = Color::BLACK;
 
 
